gitops/apps/immich/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
