gitops/apps/immich/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server-custom
  namespace: immich
spec:
  ports:
    - name: http
      port: 2283
      targetPort: http
      appProtocol: kubernetes.io/ws
  selector:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
