gitops/apps/immich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  labels:
    probe: enabled
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
  hostnames:
    - "immich.bealv.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: "3600s"
        backendRequest: "3600s"
      backendRefs:
        - name: immich-server-custom
          port: 2283
