gitops/apps/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  annotations:
    external-dns.alpha.kubernetes.io/target: 550e0dbd-4087-47b2-ba9e-e5622e40b399.cfargotunnel.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    cert-manager.io/cluster-issuer: bealvio
    projectcontour.io/websocket-routes: /api/socket.io
  labels:
    probe: enabled
spec:
  ingressClassName: external
  rules:
    - host: 'immich.bealv.io'
      http:
        paths:
          - path: /api/socket.io
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
  tls:
    - hosts:
        - 'immich.bealv.io'
      secretName: immich-tls
